Increased font size for smaller screens to avoid auto zoom that breaks the UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -185,6 +185,13 @@ input {
     width: 50%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  input {
+    font-size: 16px;
+  }
+}
+
 input.error {
   border: 2px solid var(--clr-red-dark);
   background-color: rgba(255, 0, 0, 0.233);
